<resources>
    <string name="app_name">MusicApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="music_app">Music App</string>
    <string name="all_song">All songs</string>
    <string name="featured_song">Featured Songs</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="popular">Popular Songs</string>
    <string name="new_song">New Songs</string>
    <string name="music_player">Music Player</string>
    <string name="label_start_time">00:00</string>
    <string name="msg_please_waiting">Please wait…</string>
    <string name="msg_send_feedback_success">Send feedback successfully!</string>
    <string name="msg_exit_app">Are you sure you want to exit?</string>
    <string name="msg_get_date_error">General error, please try again later</string>
    <string name="action_ok">Ok</string>
    <string name="menu_popular_songs">Popular Song</string>
    <string name="menu_new_songs">New Songs</string>
    <string name="menu_all_songs">All Songs</string>
    <string name="menu_featured_songs">Feature Song</string>
    <string name="action_cancel">Cancel</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="view_all">View all</string>
    <string name="hint_search_name">Nhập tên bài hát</string>
    <string name="label_artist">Artist</string>
    <string name="menu_home">Home</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_contact">Contact</string>
    <string name="play_all">Play all</string>
</resources>